--- a/src/styles/colors.module.scss
+++ b/src/styles/colors.module.scss
@@ -6,3 +6,6 @@ $orange: rgb(246, 177, 49);
 $white: white;
 
 $shadow: 0px 4px 4px 0px #00000040;
+$shadow2:
+  0px 12px 24px 0px #272d4d33,
+  0px 1px 2px 0px #1e1e2033;
