Деталка + запрсо на деталку + обобщение частки кода для переиспользования. заглушки картинок если их нет

--- a/src/styles/colors.module.scss
+++ b/src/styles/colors.module.scss
@@ -1,9 +1,13 @@
 $green: rgb(0, 150, 0);
 $darkGreen: rgb(0, 35, 0);
+$lightGreen: #d7fff1;
 
 $orange: rgb(246, 177, 49);
 
 $white: white;
+$whiteGreen: #e0f2eb;
+
+$darkBackground: #2b3030;
 
 $shadow: 0px 4px 4px 0px #00000040;
 $shadow2:
