--- a/src/pages/MainPage/styles.module.scss
+++ b/src/pages/MainPage/styles.module.scss
@@ -1,61 +1,61 @@
 @import "styles/colors.module.scss";
 
-.green {
-  color: $green;
-}
+// .green {
+//   color: $green;
+// }
 
-.darkGreen {
-  color: $darkGreen;
-}
+// .darkGreen {
+//   color: $darkGreen;
+// }
 
-.orange {
-  color: $orange;
-}
+// .orange {
+//   color: $orange;
+// }
 
-.title {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  padding: 20px 360px;
-  box-shadow: $shadow;
-  line-height: 25px;
+// .title {
+//   box-sizing: border-box;
+//   display: flex;
+//   flex-direction: column;
+//   gap: 10px;
+//   padding: 20px 360px;
+//   box-shadow: $shadow;
+//   line-height: 25px;
 
-  h1 {
-    margin: 0;
-    font-size: 25px;
-    font-weight: 600;
-  }
-}
+//   h1 {
+//     margin: 0;
+//     font-size: 25px;
+//     font-weight: 600;
+//   }
+// }
 
-.pictureBlockTitle {
-  box-sizing: border-box;
-  padding: 119px 360px;
-  background-image: linear-gradient(90deg, rgba(46, 46, 53, 0.92) 43.03%, rgba(0, 0, 0, 0) 77.53%),
-    url("assets/books.png");
-  height: 500px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-size: contain;
+// .pictureBlockTitle {
+//   box-sizing: border-box;
+//   padding: 119px 360px;
+//   background-image: linear-gradient(90deg, rgba(46, 46, 53, 0.92) 43.03%, rgba(0, 0, 0, 0) 77.53%),
+//     url("assets/books.png");
+//   height: 500px;
+//   background-repeat: no-repeat;
+//   background-size: cover;
+//   background-size: contain;
 
-  .textContent {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    max-width: 544px;
-    color: $white;
+//   .textContent {
+//     display: flex;
+//     flex-direction: column;
+//     gap: 10px;
+//     max-width: 544px;
+//     color: $white;
 
-    .titleContent {
-      font-size: 44px;
-      line-height: 56px;
-      font-weight: 700;
-    }
+//     .titleContent {
+//       font-size: 44px;
+//       line-height: 56px;
+//       font-weight: 700;
+//     }
 
-    .content {
-      line-height: 28px;
-    }
-  }
-}
+//     .content {
+//       line-height: 28px;
+//     }
+//   }
+// }
 
 .searchBarContainer {
   box-sizing: border-box;
