--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-
+h3{
+  margin: 0;
+}
 
 body {
   margin: 0;
-  /* display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh; */
 }
 
 
