--- a/src/styles/colors.module.scss
+++ b/src/styles/colors.module.scss
@@ -7,6 +7,9 @@ $orange: rgb(246, 177, 49);
 $white: white;
 $whiteGreen: #e0f2eb;
 
+$gray: #333333;
+$gray2: #727d7d;
+
 $darkBackground: #2b3030;
 
 $shadow: 0px 4px 4px 0px #00000040;
