--- a/src/pages/DetailPage/styles.module.scss
+++ b/src/pages/DetailPage/styles.module.scss
@@ -12,6 +12,19 @@
   max-width: 1200px;
   min-height: 248px;
   max-height: 666px;
+
+  @media screen and (max-width: 1024px) {
+    padding: 20px; 
+    max-width: 700px;
+  }
+
+  // // Медиа-запрос для мобильных устройств
+  @media screen and (max-width: 768px) {
+    padding: 15px; 
+    max-width: 420px; 
+    min-height: auto;
+    max-height: none; /
+  }
 }
 
 .CardInfo {
@@ -47,6 +60,22 @@
       color: $darkBackground;
       font-size: 14px;
       line-height: 24px;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .CardInfo {
+    flex-direction: column;
+    & > :first-child {
+      width: 100%;
+      height: 367px;
+      border: 2px solid red;
+      
+      img {
+        width: 100%;
+        background-size: 100% 100%;
+      }
     }
   }
 }
