--- a/src/components/CardContainer/styles.module.scss
+++ b/src/components/CardContainer/styles.module.scss
@@ -1,7 +1,10 @@
+@import "styles/colors.module.scss";
+
 .wrapper {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 20px;
   padding: 50px 360px;
   position: relative;
@@ -10,6 +13,24 @@
   a {
     text-decoration: none;
   }
+
+  button {
+    box-sizing: border-box;
+    width: 236px;
+    padding: 13px 40px 13px 40px;
+    border-radius: 4px;
+    background-color: #233d2c;
+    color: $white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    line-height: 28px;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
 
 .bookCardContainer {
@@ -17,4 +38,24 @@
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+}
+
+@media screen and (min-width: 1200px) {
+  .wrapper {
+    padding: 50px 250px;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .wrapper {
+    padding: 50px 250px;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 768px) {
+  .wrapper {
+    padding: 50px 200px;
+    text-align: center;
+  }
 }
