--- a/src/pages/DetailPage/styles.module.scss
+++ b/src/pages/DetailPage/styles.module.scss
@@ -14,16 +14,16 @@
   max-height: 666px;
 
   @media screen and (max-width: 1024px) {
-    padding: 20px; 
+    padding: 20px;
     max-width: 700px;
   }
 
   // // Медиа-запрос для мобильных устройств
   @media screen and (max-width: 768px) {
-    padding: 15px; 
-    max-width: 420px; 
+    padding: 15px;
+    max-width: 420px;
     min-height: auto;
-    max-height: none; /
+    max-height: none;
   }
 }
 
@@ -71,7 +71,7 @@
       width: 100%;
       height: 367px;
       border: 2px solid red;
-      
+
       img {
         width: 100%;
         background-size: 100% 100%;
