--- a/src/pages/MainPage/styles.module.scss
+++ b/src/pages/MainPage/styles.module.scss
@@ -1,68 +1,10 @@
 @import "styles/colors.module.scss";
 
-// .green {
-//   color: $green;
-// }
-
-// .darkGreen {
-//   color: $darkGreen;
-// }
-
-// .orange {
-//   color: $orange;
-// }
-
-// .title {
-//   box-sizing: border-box;
-//   display: flex;
-//   flex-direction: column;
-//   gap: 10px;
-//   padding: 20px 360px;
-//   box-shadow: $shadow;
-//   line-height: 25px;
-
-//   h1 {
-//     margin: 0;
-//     font-size: 25px;
-//     font-weight: 600;
-//   }
-// }
-
-// .pictureBlockTitle {
-//   box-sizing: border-box;
-//   padding: 119px 360px;
-//   background-image: linear-gradient(90deg, rgba(46, 46, 53, 0.92) 43.03%, rgba(0, 0, 0, 0) 77.53%),
-//     url("assets/books.png");
-//   height: 500px;
-//   background-repeat: no-repeat;
-//   background-size: cover;
-//   background-size: contain;
-
-//   .textContent {
-//     display: flex;
-//     flex-direction: column;
-//     gap: 10px;
-//     max-width: 544px;
-//     color: $white;
-
-//     .titleContent {
-//       font-size: 44px;
-//       line-height: 56px;
-//       font-weight: 700;
-//     }
-
-//     .content {
-//       line-height: 28px;
-//     }
-//   }
-// }
-
 .searchBarContainer {
   box-sizing: border-box;
   padding: 33px 28px;
   background-color: $white;
   position: relative;
-  // top: -30px;
   transform: translateY(-30px);
   border-radius: 4px;
   box-shadow: $shadow2;
@@ -90,5 +32,27 @@
       height: 54px;
       padding: 7px 10px 7px 16px;
     }
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .searchBarContainer {
+    max-width: 1000px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .searchBarContainer {
+    padding: 20px;
+    max-width: 600px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .searchBarContainer {
+    padding: 15px;
+    max-width: 480px;
+    min-height: auto;
+    max-height: none;
   }
 }
