--- a/src/components/CardContainer/styles.module.scss
+++ b/src/components/CardContainer/styles.module.scss
@@ -4,11 +4,16 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 20px;
   padding: 50px 360px;
   position: relative;
   transform: translateY(-30px);
+
+  & > :first-child {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 26px;
+  }
 
   a {
     text-decoration: none;
@@ -26,6 +31,7 @@
     justify-content: center;
     font-size: 16px;
     line-height: 28px;
+    margin: 0 auto;
 
     &:hover {
       cursor: pointer;
@@ -43,19 +49,20 @@
 @media screen and (min-width: 1200px) {
   .wrapper {
     padding: 50px 250px;
-    text-align: center;
   }
 }
 
 @media screen and (max-width: 1024px) {
   .wrapper {
     padding: 50px 250px;
-    text-align: center;
   }
 }
 @media screen and (max-width: 768px) {
   .wrapper {
     padding: 50px 200px;
-    text-align: center;
   }
+}
+
+.centerText {
+  align-items: center;
 }
