--- a/src/styles/colors.module.scss
+++ b/src/styles/colors.module.scss
@@ -1,10 +1,12 @@
 $green: rgb(0, 150, 0);
+$green2: #233d2c;
 $darkGreen: rgb(0, 35, 0);
 $lightGreen: #d7fff1;
 
 $orange: rgb(246, 177, 49);
 
 $white: white;
+$white2: #eaeaea;
 $whiteGreen: #e0f2eb;
 
 $gray: #333333;
