--- a/src/components/MainContent/styles.module.scss
+++ b/src/components/MainContent/styles.module.scss
@@ -75,7 +75,9 @@
 
 @media screen and (max-width: 768px) {
   .title {
-    padding: 20px 200px;
+    // padding: 20px 200px;
+    padding: 20px 120px; // тест для деплоя
+
     h1 {
       font-size: 24px;
     }
