--- a/src/pages/MainPage/styles.module.scss
+++ b/src/pages/MainPage/styles.module.scss
@@ -32,6 +32,27 @@
       width: 557px;
       min-height: 54px;
       padding: 7px 10px 7px 16px;
+
+      select {
+        width: 347px;
+        background: $white2;
+        padding: 7px 10px 7px 16px;
+        display: flex;
+        justify-content: space-between;
+        border-radius: 4px;
+        border: none;
+
+        &:disabled {
+          cursor: not-allowed;
+        }
+      }
+
+      @media screen and (max-width: 768px) {
+        select {
+          width: 100%;
+          height: 54px;
+        }
+      }
     }
   }
 }
