--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 :root {
   display: flex;
   flex-direction: column;
-  max-width: 1920px;
+  /* max-width: 1920px;   */
+  /* Отключить для адаптива в обе стороны */
   
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
