--- a/src/components/BookCard/styles.module.scss
+++ b/src/components/BookCard/styles.module.scss
@@ -3,9 +3,8 @@
 .card {
   box-sizing: border-box;
   max-width: 292.5px;
-  width: 100%;
+  width: 292.5px;
   height: 480px;
-
   flex: 1 1 calc(25% - 20px);
   border-radius: 4px;
   background: $darkBackground;
@@ -13,8 +12,8 @@
 
   & > :first-child {
     width: 100%;
-    height: 250p;
-    * & img {
+    height: 250px;
+    & img {
       width: 100%;
       height: 100%;
       object-fit: fill;
