--- a/src/components/CardContainer/styles.module.scss
+++ b/src/components/CardContainer/styles.module.scss
@@ -5,7 +5,8 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding: 50px 360px;
+  max-width: 1200px;
+  margin: 20px auto 0;
   position: relative;
   transform: translateY(-30px);
 
@@ -46,20 +47,37 @@
   gap: 10px;
 }
 
-// @media screen and (min-width: 1200px) {
-//   .wrapper {
-//     padding: 50px 250px; //! странно сейчас это не нужно. вдимо для деплоя добавлял ибо там криво стили пошли( проверить прежде чем удалить)
-//   }
-// }
+.virtualList {
+  max-width: 1200px;
+  width: 100%;
+
+  div[class~="rc-virtual-list-holder-inner"] {
+    flex-direction: row !important;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+
+  div[class~="rc-virtual-list-holder"] {
+    & > div {
+      max-width: 1200px;
+    }
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .wrapper {
+    max-width: 1000px;
+  }
+}
 
 @media screen and (max-width: 1024px) {
   .wrapper {
-    padding: 50px 250px;
+    max-width: 600px;
   }
 }
 @media screen and (max-width: 768px) {
   .wrapper {
-    padding: 50px 80px;
+    max-width: 480px;
   }
 }
 
