перевел запросы на ртк ( общий + деталка) сделал фикс контейнера виртуализации( но есть странное поведение) добавил пути в конфиг vite для стора и хуков удалил лишний див и его стили т к добавил блок виртуализации и он не нужен более реализовал запросы через ртк - старый код с лооикой удалил

--- a/src/components/BookCard/styles.module.scss
+++ b/src/components/BookCard/styles.module.scss
@@ -47,6 +47,9 @@
   h3 {
     color: $white;
     font-size: 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .description {
