Поправил компонент селекта. убрал страшную гоалочку. сделал сохранение фильтров при переходе в деталку и назад.  при тесте все рабоатает до перезагрузки страницы.( сделал контекст для фильтров и его использую вместо локальных стейтов)

--- a/src/pages/DetailPage/styles.module.scss
+++ b/src/pages/DetailPage/styles.module.scss
@@ -45,6 +45,8 @@
     flex-direction: column;
     gap: 30px;
     line-height: 26px;
+    max-height: 600px;
+    overflow-y: auto;
 
     & > :first-child {
       color: $gray2;
