Добивал стилей к Подписи Найдено + цвета в шапке и оранжевый в colors

--- a/src/styles/colors.module.scss
+++ b/src/styles/colors.module.scss
@@ -1,9 +1,9 @@
-$green: rgb(0, 150, 0);
+$green: #166527;
 $green2: #233d2c;
-$darkGreen: rgb(0, 35, 0);
+$darkGreen: #1a3724;
 $lightGreen: #d7fff1;
 
-$orange: rgb(246, 177, 49);
+$orange: #f5b963;
 
 $white: white;
 $white2: #eaeaea;
