--- a/src/components/CardContainer/styles.module.scss
+++ b/src/components/CardContainer/styles.module.scss
@@ -14,6 +14,13 @@
     font-size: 20px;
     font-weight: 700;
     line-height: 26px;
+
+    & > span {
+      text-decoration: underline;
+      text-decoration-color: $orange;
+      text-decoration-thickness: 5px;
+      text-underline-offset: 10px;
+    }
   }
 
   a {
