--- a/src/components/Select/styles.module.scss
+++ b/src/components/Select/styles.module.scss
@@ -15,4 +15,19 @@
       cursor: not-allowed;
     }
   }
+
+  .selectIcon {
+    padding: 0;
+    border: none;
+    background: none;
+    position: absolute;
+    padding: 5px 10px;
+    box-sizing: border-box;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .selectIcon {
+    right: 15px;
+  }
 }
