--- a/src/components/CardContainer/styles.module.scss
+++ b/src/components/CardContainer/styles.module.scss
@@ -62,9 +62,17 @@
   }
 
   div[class~="rc-virtual-list-holder"] {
+    max-height: 980px;
+    overflow-y: auto;
+
     & > div {
       max-width: 1200px;
     }
+  }
+
+  div[class~="rc-virtual-list-scrollbar-thumb"]{
+    width: 5px !important;
+    background: $green !important; 
   }
 }
 
