--- a/src/styles/colors.module.scss
+++ b/src/styles/colors.module.scss
@@ -7,7 +7,10 @@ $orange: #f5b963;
 
 $white: white;
 $white2: #eaeaea;
+$white3:#ccc;
 $whiteGreen: #e0f2eb;
+
+$black: black;
 
 $gray: #333333;
 $gray2: #727d7d;
