--- a/src/styles/global.module.scss
+++ b/src/styles/global.module.scss
@@ -1,11 +1,13 @@
+@import "styles/colors.module.scss";
+
 :root {
   display: flex;
   flex-direction: column;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color: black;
-  background-color: white;
+  color: $black;
+  background-color: $white;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -15,11 +17,6 @@
 h3{
   margin: 0;
 }
-
-body {
-  margin: 0;
-}
-
 
 
 
