--- a/src/components/MainContent/styles.module.scss
+++ b/src/components/MainContent/styles.module.scss
@@ -32,7 +32,7 @@
   box-sizing: border-box;
   padding: 119px 360px;
   background-image: linear-gradient(90deg, rgba(46, 46, 53, 0.92) 43.03%, rgba(0, 0, 0, 0) 77.53%),
-    url("assets/books.png");
+    url("/books.png");
   height: 500px;
   background-repeat: no-repeat;
   background-size: cover;
