удалил не нужные комменты

--- a/src/components/BookCard/styles.module.scss
+++ b/src/components/BookCard/styles.module.scss
@@ -23,13 +23,13 @@
 
 @media (max-width: 768px) {
   .card {
-    flex: 1 1 calc(50% - 20px); // 1-2 карты
+    flex: 1 1 calc(50% - 20px);
   }
 }
 
 @media (max-width: 480px) {
   .card {
-    flex: 1 1 calc(100% - 20px); //одна карта
+    flex: 1 1 calc(100% - 20px);
   }
 }
 
